tmp/core_object-cache_path-UpGoNrOV.tmp/gyak09/tests/pods/errors/new/route.jshint.js
define('gyak09/tests/pods/errors/new/route.jshint', function () {

  'use strict';

  QUnit.module('JSHint - pods/errors/new');
  QUnit.test('pods/errors/new/route.js should pass jshint', function(assert) { 
    assert.ok(false, 'pods/errors/new/route.js should pass jshint.\npods/errors/new/route.js: line 1, col 1, \'import\' is only available in ES6 (use esnext option).\npods/errors/new/route.js: line 3, col 1, \'export\' is only available in ES6 (use esnext option).\n\n2 errors'); 
  });

});